--- a/source/catalog.html
+++ b/source/catalog.html
@@ -40,9 +40,9 @@
           <a href="#">Поиск по сайту</a>
         </li>
         <li class="main-nav__item main-nav__item--cart">
-            <svg class="user-list__icon" width="20.2" height="18.8">
-                <use xlink:href="./img/sprite.svg#icon-bag"></use>
-              </svg>
+          <svg class="user-list__icon" width="20.2" height="18.8">
+            <use xlink:href="./img/sprite.svg#icon-bag"></use>
+          </svg>
           <a href="#">Корзина: пока пуста</a>
         </li>
       </ul>
@@ -73,13 +73,18 @@
         <li class="products-list__item product-card">
 
           <picture>
-            <source type="image/webp" media="(min-width: 1150px)" srcset="img/photo-hare-desktop@1x.webp 1x, img/photo-hare-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-hare-tablet@1x.webp 1x, img/photo-hare-tablet@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 1150px)"
+              srcset="img/photo-hare-desktop@1x.webp 1x, img/photo-hare-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)"
+              srcset="img/photo-hare-tablet@1x.webp 1x, img/photo-hare-tablet@2x.webp 2x">
             <source type="image/webp" srcset="img/photo-hare-mobile@1x.webp 1x, img/photo-hare-mobile@2x.webp 2x">
+            <source media="(min-width: 1150px)"
+              srcset="img/photo-hare-desktop@1x.jpg 1x, img/photo-hare-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)"
+              srcset="img/photo-hare-tablet@1x.jpg 1x, img/photo-hare-tablet@2x.jpg 2x">
 
-            <source media="(min-width: 1150px)" srcset="img/photo-hare-desktop@1x.jpg 1x, img/photo-hare-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)" srcset="img/photo-hare-tablet@1x.jpg 1x, img/photo-hare-tablet@2x.jpg 2x">
-            <img class="product-card__image" width="260" height="195" src="img/photo-hare-mobile@1x.jpg" alt="Зайчик-попрыгайчик">
+            <img class="product-card__image" width="260" height="195" src="img/photo-hare-mobile@1x.jpg"
+              alt="Зайчик-попрыгайчик">
           </picture>
 
           <div class="product-card__info">
@@ -97,13 +102,17 @@
         <li class="products-list__item product-card">
 
           <picture>
-            <source type="image/webp" media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.webp 1x, img/photo-bowl-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.webp 1x, img/photo-bowl-tablet@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 1150px)"
+              srcset="img/photo-bowl-desktop@1x.webp 1x, img/photo-bowl-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)"
+              srcset="img/photo-bowl-tablet@1x.webp 1x, img/photo-bowl-tablet@2x.webp 2x">
             <source type="image/webp" srcset="img/photo-bowl-mobile@1x.webp 1x, img/photo-bowl-mobile@2x.webp 2x">
-
-            <source media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x">
-            <img class="product-card__image" width="260" height="195" src="img/photo-bowl-mobile@1x.jpg" alt="Корзинка для белья">
+            <source media="(min-width: 1150px)"
+              srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)"
+              srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x">
+            <img class="product-card__image" width="260" height="195" src="img/photo-bowl-mobile@1x.jpg"
+              alt="Корзинка для белья">
           </picture>
 
           <div class="product-card__info">
@@ -124,13 +133,17 @@
         <li class="products-list__item product-card">
 
           <picture>
-            <source type="image/webp" media="(min-width: 1150px)" srcset="img/photo-toys-desktop@1x.webp 1x, img/photo-toys-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.webp 1x, img/photo-toys-tablet@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 1150px)"
+              srcset="img/photo-toys-desktop@1x.webp 1x, img/photo-toys-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)"
+              srcset="img/photo-toys-tablet@1x.webp 1x, img/photo-toys-tablet@2x.webp 2x">
             <source type="image/webp" srcset="img/photo-toys-mobile@1x.webp 1x, img/photo-toys-mobile@2x.webp 2x">
-
-            <source media="(min-width: 1150px)" srcset="img/photo-toys-desktop@1x.jpg 1x, img/photo-toys-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.jpg 1x, img/photo-toys-tablet@2x.jpg 2x">
-            <img class="product-card__image" width="260" height="195" src="img/photo-toys-mobile@1x.jpg" alt="Большая корзинка для игрушек">
+            <source media="(min-width: 1150px)"
+              srcset="img/photo-toys-desktop@1x.jpg 1x, img/photo-toys-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)"
+              srcset="img/photo-toys-tablet@1x.jpg 1x, img/photo-toys-tablet@2x.jpg 2x">
+            <img class="product-card__image" width="260" height="195" src="img/photo-toys-mobile@1x.jpg"
+              alt="Большая корзинка для игрушек">
           </picture>
 
           <div class="product-card__info">
@@ -153,8 +166,10 @@
 
       <div class="how-its-done__image-wrapper video-player">
         <picture>
-          <source type="image/webp" media="(min-width: 1150px)" srcset="img/video-desktop@1x.webp 1x, img/video-desktop@2x.webp 2x">
-          <source type="image/webp" media="(min-width: 768px)" srcset="img/video-tablet@1x.webp 1x, img/video-tablet@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 1150px)"
+            srcset="img/video-desktop@1x.webp 1x, img/video-desktop@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 768px)"
+            srcset="img/video-tablet@1x.webp 1x, img/video-tablet@2x.webp 2x">
           <source type="image/webp" srcset="img/video-mobile@1x.webp 1x, img/video-mobile@2x.webp 2x">
 
           <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
