--- a/source/form.html
+++ b/source/form.html
@@ -19,9 +19,9 @@
 
     <div class="main-nav">
 
-      <a class="main-nav__logo header__logo">
+      <a class="main-nav__logo header__logo" href="/">
         <picture>
-          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
           <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
           <img class="header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Мишка">
         </picture>
