--- a/source/index.html
+++ b/source/index.html
@@ -109,13 +109,16 @@
         </table>
 
         <picture>
-          <source type="image/webp" media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.webp 1x, img/triple-set-desktop@2x.webp 2x">
-          <source type="image/webp" media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.webp 1x, img/triple-set-tablet@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 1150px)"
+            srcset="img/triple-set-desktop@1x.webp 1x, img/triple-set-desktop@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 768px)"
+            srcset="img/triple-set-tablet@1x.webp 1x, img/triple-set-tablet@2x.webp 2x">
           <source type="image/webp" srcset="img/triple-set-mobile@1x.webp 1x, img/triple-set-mobile@2x.webp 2x">
-
-          <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
+          <source media="(min-width: 1150px)"
+            srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
           <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
-          <img class="product-of-week__image" src="./img/triple-set-mobile@1x.jpg" width="260px" height="315px" alt="Товар недели">
+          <img class="product-of-week__image" src="img/triple-set-mobile@1x.jpg" width="260px" height="315px"
+            alt="Товар недели">
         </picture>
         <span class="product-of-week__price">Цена: 990 руб.</span>
         <a class="product-of-week__buy button" href="form.html">Заказать</a>
@@ -216,7 +219,7 @@
 
   <footer class="footer">
     <a class="footer__logo">
-      <img class="footer__logo-image" src="./img/logo-footer.svg" width="102" height="34" alt="Мишка">
+      <img class="footer__logo-image" src="img/logo-footer.svg" width="102" height="34" alt="Мишка">
     </a>
     <div class="footer__social social">
       <ul class="social__list">
